3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Add an 'empty' command, that puts all contents of a (or all) container either
on ground or in player's opened container.
 include/sproto.h
 lib/Makefile.am
 server/c_object.c commands.c
Added file:
 lib/help/empty
Nicolas Weeger 2007-09-09

lib/metaserver2: Update with official metaserver2 location.  MSW 2007-08-31

Remove support for obsolete 'fly_on/fly_off/walk_on/walk_off' attributes.
--
doc/Developers/objects: Update documentation about no_pass attribute.
doc/{checkarch,collect}.pl.in: Check for move_on/off instead.
common/loader.l: Remove support for fly_on/fly_off/walk_on/walk_off
 attributes.
Andreas Kirschbaum 2007-08-25

Fix incorrect lookup_spell_by_name() that prevented eg marking runes to work.
 server/spell_util.c
Nicolas Weeger 2007-08-23

Fix mistake in check logic, preventing from building connected items.
 server/build_map.c
Nicolas Weeger 2007-08-23

Fix bug #1779574: can destroy outer walls in lone town apartment, level 2.
 server/build_map.c: fix can_build_over(), add missing check.
Nicolas Weeger 2007-08-23

lib/help/{fire,fire_stop}: Add help for "fire" and "fire_stop" commands.
Andreas Kirschbaum 2007-08-22

Don't display an evil error message when trying to reset a map with a player on.
 server/c_wiz.c
Nicolas Weeger 2007-08-20

Write when an item is glowing.
 common/item.c: add "glowing" to glowing items.
 types/legacy/legacy_describe.c: LAMP have some description, too.
Nicolas Weeger 2007-08-20

Fix item update on ground. Factorize code. Add increase_ob_nr() function.
 include/libproto.h
 common/object.c
Nicolas Weeger 2007-08-18

Various small fixes.
 common/exp.c: fix comment.